crates/ruff_linter/src/rules/flake8_comprehensions/snapshots/ruff_linter__rules__flake8_comprehensions__tests__preview__C409_C409_py315.py.snap
---
source: crates/ruff_linter/src/rules/flake8_comprehensions/mod.rs
---
C409 Unnecessary list comprehension passed to `tuple()` (rewrite as a generator)
 --> C409_py315.py:3:1
  |
1 | xs = [[1], [2]]
2 |
3 | tuple([*x for x in xs])
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |
help: Rewrite as a generator
